Add updater in About section

--- a/src/conf.ini
+++ b/src/conf.ini
@@ -1,14 +1,16 @@
 [SyncPy2]
-app.name=SyncPy UI
-app.version=2.0.1
-plotImgPath=ui/img/matplotlib.png
-uiFile=ui/Syncpy2.ui
-github=https://github.com/syncpy/SyncPy
-sessionVersion=2.2
+app.name = SyncPy UI
+app.version = 2.0.1
+plotimgpath = ui/img/matplotlib.png
+uifile = ui/Syncpy2.ui
+github = https://github.com/syncpy/SyncPy
+sessionversion = 2.2
+lastupdate = ee6535b2117010bd70d539ab05d5ab4d885b45fd
 
 [HeaderFileWizard]
-uiFile=ui/SyncpyHeaderFileWizard.ui
+uifile = ui/SyncpyHeaderFileWizard.ui
 
 [SyncPy2MethodWizard]
-app.name=SyncPy Method Wizard
-app.version=2.0
+app.name = SyncPy Method Wizard
+app.version = 2.0
+
