--- a/examples/Example_ss.template
+++ b/examples/Example_ss.template
@@ -81,5 +81,5 @@ print("****************************************\n")
 
 
 
-raw_input("Push ENTER key to exit.")
+input("Push ENTER key to exit.")
 
